--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </li>
         </ul>
       </nav>
-      <a class="header_logo">
+      <a href="#0" class="header_logo">
         <img 
           class="header_logo-image"
           src="images/logo-black.svg"
@@ -35,7 +35,7 @@
         <div class="header__address">
            <a href="tel:+99995555555">+9 999 555 5555</a><br>
            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-           <a>наб. Принсенграхт 263- <br> 265, Амстердам</a>
+           <a href="#0">наб. Принсенграхт 263- <br> 265, Амстердам</a>
         </div>
       </address>
     </header>
@@ -110,7 +110,7 @@
         <div class="footer_addres">
           <a href="tel:+99995555555">+9 999 555 5555</a><br>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-          <a>наб. Принсенграхт 263-265,<br> Амстердам</a>  
+          <a href="0#">наб. Принсенграхт 263-265,<br> Амстердам</a>  
         </div>
       </address>
       <nav class="footer__menu">
