--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="header_menu">
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
-            <a href="0#" class="header__link_active">главная</a>
+            <a href="0#" class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
             <a href="#0" class="header__link">посмотреть лоты</a>
@@ -49,7 +49,7 @@
         </h1>
         <div class="description">
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -57,34 +57,40 @@
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a href="0#" class="card-link">
-              <div class="card card_type_film">
+              <address class="card card_type_film">
                 <div class="overlay"></div>
-                <div class="card__title"><span>Фильм режиссёра, который бросил киношколу</span></div>
-                <article class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
-              </div>
+                <h3 class="card__title"><span>Фильм режиссёра, который бросил киношколу</span></h3>
+                <article class="card__text">
+                  <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                </article>
+              </address>
             </a>
           </li>        
          
           <li class="lots__card-list-item">
             <a href="0#" class="card-link">
-              <div class="card card_type_book">
+              <address class="card card_type_book">
                 <div class="overlay"></div>
-                <div class="card__title"><span>Книга, где описан один скучный день из жизни рекламного агента</span></div>
-                <article class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</article>
-              </div>
+                <h3 class="card__title"><span>Книга, где описан один скучный день из жизни рекламного агента</span></h3>
+                <article class="card__text">
+                  <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                </article>
+              </address>
             </a>
           </li>
           <li class="lots__card-list-item">
             <a href="0#" class="card-link">
-              <div class="card card_type_picture">
+              <address class="card card_type_picture">
                 <div class="overlay"></div>
-                <div class="card__title"><span>Картина, которую повторит даже 5-летний сын маминой подруги</span></div>
-                <article class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</article>
-              </div>
+                <h3 class="card__title"><span>Картина, которую повторит даже 5-летний сын маминой подруги</span></h3>
+                <article class="card__text">
+                  <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                </article>
+              </address>
             </a>
           </li>
         </ul>
-        <div class="lots__look-more-link">посмотреть больше</div>
+        <a href="0#" class="lots__look-more-link">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__column">
@@ -96,7 +102,7 @@
           </div>
         </div>
         <div class="about__column">
-          <h3 class="about__title">Об аукционе</h3>
+          <h4 class="about__title">Об аукционе</h4>
            <div class="about__text">
               <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
               <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -116,7 +122,7 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a href="0#" class="footer__menu-link_active">главная</a>
+            <a href="0#" class="footer__menu-link footer__menu-link_active">главная</a>
           </li>
           <li class="footer__menu-list-item">
             <a href="0#" class="footer__menu-link">посмотреть лоты</a>
