--- a/index.html
+++ b/index.html
@@ -57,36 +57,36 @@
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a href="0#" class="card-link">
-              <address class="card card_type_film">
+              <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h3 class="card__title"><span>Фильм режиссёра, который бросил киношколу</span></h3>
-                <article class="card__text">
-                  <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-                </article>
-              </address>
+                  <h3 class="card__title"><span>Фильм режиссёра, который бросил киношколу</span></h3>
+                  <p class="card__text">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                  </p>                
+              </article>
             </a>
           </li>        
          
           <li class="lots__card-list-item">
             <a href="0#" class="card-link">
-              <address class="card card_type_book">
+              <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title"><span>Книга, где описан один скучный день из жизни рекламного агента</span></h3>
-                <article class="card__text">
-                  <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-                </article>
-              </address>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
             </a>
           </li>
           <li class="lots__card-list-item">
             <a href="0#" class="card-link">
-              <address class="card card_type_picture">
+              <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title"><span>Картина, которую повторит даже 5-летний сын маминой подруги</span></h3>
-                <article class="card__text">
-                  <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-                </article>
-              </address>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
             </a>
           </li>
         </ul>
