--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="0#" class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                  <h3 class="card__title"><span>Фильм режиссёра, который бросил киношколу</span></h3>
+                  <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
                   <p class="card__text">
                     Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
                   </p>                
@@ -71,7 +71,7 @@
             <a href="0#" class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h3 class="card__title"><span>Книга, где описан один скучный день из жизни рекламного агента</span></h3>
+                <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
                 </p>
@@ -82,7 +82,7 @@
             <a href="0#" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h3 class="card__title"><span>Картина, которую повторит даже 5-летний сын маминой подруги</span></h3>
+                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
                 </p>
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="about__column">
-          <h4 class="about__title">Об аукционе</h4>
+          <h2 class="about__title">Об аукционе</h2>
            <div class="about__text">
               <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
               <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
