--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="header__address">
            <a href="tel:+99995555555">+9 999 555 5555</a><br>
            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-           <div href="#0">наб. Принсенграхт 263- <br> 265, Амстердам</div>
+           <div>наб. Принсенграхт 263- <br> 265, Амстердам</div>
         </div>
       </address>
     </header>
@@ -116,7 +116,7 @@
         <div class="footer_addres">
           <a href="tel:+99995555555">+9 999 555 5555</a><br>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-          <div href="0#">наб. Принсенграхт 263-265,<br> Амстердам</div>  
+          <div>наб. Принсенграхт 263-265,<br> Амстердам</div>  
         </div>
       </address>
       <nav class="footer__menu">
